# Laboratory_OAIP

./: README.md
LR3/Task1/: main.cpp
LR3/Task_2/: main.cpp
LR3/Task_3/: main.cpp
LR3/Task_4/: main.cpp
LR3/Task_5/: main.cpp
LR3/Task_6/: main.cpp
LR3/Task_7/: main.cpp
LR3/Task_8/: main.cpp
LR4/Google Tests/Task_1(Google Tests)/: CMakeLists.txt  Task_1.cpp  Task_1.h  main.cpp
LR4/Google Tests/Task_5(Google Tests)/: CMakeLists.txt  Saper.c  Saper.h  main.cpp
LR4/Google Tests/Task_6(Google Tests)/: CMakeLists.txt  main.cpp  main_magic.c  main_magic.h  test
LR4/Task_1/: main.cpp
LR4/Task_2/: main.cpp
LR4/Task_3/: main.cpp
LR4/Task_4/: main.cpp
LR4/Task_5/: CMakeLists.txt  main.c  main.cpp
LR4/Task_6/: CMakeLists.txt  main_magic.c
LR4/untitled/: main.cpp
LR5/Task_1/: prog_req.h
LR6/Gtest/: CMakeLists.txt  main.cpp
LR6/Task/: CMakeLists.txt  TextFunctions.cpp  TextFunctions.h  maiFunc.cpp  maiFunc.h  main.cpp
LR7/: BigNums.cpp  BigNums.h  Conver.cpp  Convert.h  NewBasisOp.cpp  NewBasisOp.h
LR7/BitsOP/: BitsOperation.cpp  BitsOperation.h
LR8/: CMakeLists.txt  main.cpp
LR8/StructFunc/: StrucFunctions.cpp
LR8/Task1/: CMakeLists.txt  main.cpp
LR8/Task1/FileLoad/: FileFunc.cpp  FileFunc.h
LR8/Task1/MainFunc/: MainTaskFunc.cpp  MainTaskFunc.h
LR8/Task1/Menu/: menu.cpp  menu.h
LR8/Task1/StructFunc/: StrucFunctions.cpp  StrucFunctions.h
LR8/Task2/: CMakeLists.txt  main.cpp
LR8/Task2/FileSave/: Data.txt  SaveAndCreate.cpp  SaveAndCreate.h
LR8/Task2/FuncPractical/: myFunc.cpp  myFunc.h
LR8/Task2/StructFunc/: structFunctions.cpp  structFunctions.h
LR8/Task2/menusFunc/: inputValidateFunc.cpp  inputValidateFunc.h  menuFunc.cpp  menuFunc.h
